Enabled Spring Boot Actuator and Spring Boot R2DBC w/ PostgreSQL dependencies